--- a/aurelia_dot_net/predicatesPractice/src/app.html
+++ b/aurelia_dot_net/predicatesPractice/src/app.html
@@ -1,4 +1,5 @@
 <template>
-   <input id= "someId" type= "text" value.bind= "Text & oneTime" />
-   <p>${Text}</p>
+   <require from = './converters' ></require>
+   <!--<input id= "someId" type= "text" value.bind= "Text & oneTime" />-->
+   <p>${CurrentDate}</p>
 </template>
